--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.112",
@@ -41,6 +41,8 @@
     ]
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.2",
+    "jsdom": "^25.0.1",
     "vitest": "^2.1.2"
   }
 }
