--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.2",
     "jsdom": "^25.0.1",
+    "sass": "^1.80.2",
     "vitest": "^2.1.2"
   }
 }
